# OWEC

./: .gitignore  AUTH_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  RAMPS_OMNI_INTEGRATION.md  README.md  ROLE_BASED_DASHBOARD_IMPLEMENTATION.md  WORKSPACE_ARCHITECTURE.md  docker-compose.yml
omni-backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
omni-backend/alembic/: env.py
omni-backend/alembic/versions/: 001_add_schema_version_id_to_projects.py  001_workspace_tenancy.py  002_add_unique_constraint_schemas.py  003_add_ce_tables.py  004_ce_dynamic_form_engine.py  005_ce_schema_metadata.py  006_user_context_tables.py  007_add_nodes_scalability_columns.py
omni-backend/app/: main.py
omni-backend/app/api/: dependencies.py
omni-backend/app/api/v1/: __init__.py  router.py  workspaces.py
omni-backend/app/config/: __init__.py  settings.py
omni-backend/app/db/: base.py  session.py
omni-backend/app/models/: __init__.py  edge.py  entity.py  event.py  node.py  project.py  schema.py  workspace.py  workspace_cache.py
omni-backend/app/modules/: __init__.py  workspace_service.py
omni-backend/app/modules/ce/: __init__.py  router.py  schemas.py
omni-backend/app/modules/document_to_nodes/: router.py  service.py
omni-backend/app/modules/entities/: __init__.py  router.py  (+1 more)
omni-backend/app/schemas/: __init__.py  edge.py  entity.py  event.py  node.py  project.py  schema.py  workspace.py
omni-backend/app/storage/: __init__.py  local_storage.py  router.py  s3_storage.py
omni-backend/scripts/: __init__.py  migrate.py  seed_ce.py
omni-backend/tests/: conftest.py  test_workspace_tenancy.py
(+285 files in other folders)
