[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-backend"
version = "0.1.0"
description = "OMNI – Schema-Driven Narrative Engine API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",          # S3 storage (optional)
    "aiofiles>=23.2.0",
    "httpx>=0.27.0",          # for tests / health checks
    "python-multipart>=0.0.9",
    "pyjwt>=2.8.0",           # JWT token decoding
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
# Apply all pending migrations (upgrade to head)
omni-migrate         = "scripts.migrate:upgrade"
# Roll back one revision
omni-migrate-down    = "scripts.migrate:downgrade"
# Autogenerate a new revision  –  pass the message as the first argument
omni-migrate-new     = "scripts.migrate:new_revision"
# Print full revision history
omni-migrate-history = "scripts.migrate:history"
# Print current DB revision
omni-migrate-current = "scripts.migrate:current"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
